--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API service returns the filesize of file uploaded through form-data",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node server.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,10 @@
   },
   "homepage": "https://github.com/shubham9411/file-metadata#readme",
   "dependencies": {
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "express": "^4.15.4"
+  },
+  "engines": {
+    "node": "8.x"
   }
 }
